--- a/djangosnippets/accounts/templates/accounts/signup.html
+++ b/djangosnippets/accounts/templates/accounts/signup.html
@@ -2,10 +2,11 @@
 {% load django_bootstrap5 %}
 
 {% block main %}
-<h2>スニペットの編集</h2>
+<h2>会員登録</h2>
+
 <form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    {% bootstrap_button button_type="submit" content="保存" %}
+    {% bootstrap_button button_type="submit" content="登録" %}
 </form>
 {% endblock %}
