--- a/djangosnippets/snippets/templates/snippets/snippet_detail.html
+++ b/djangosnippets/snippets/templates/snippets/snippet_detail.html
@@ -1,12 +1,42 @@
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Djangoスニペット</title>
-</head>
-<body>
-    <h2>{{ snippet.title }} by {{ snippet.created_by.username}}</h2>
-    <small>投稿日：{{ snippet.created_at }}</small>
-    <pre>{{ snippet.code }}</pre>
-    <p>{{ snippet.description }}</p>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+
+{% load pygmentize %}
+
+{% block extraheader %}
+<style>{% pygments_css %}</style>
+{% endblock %}
+
+{% block main %}
+<h2>{{ snippet.title }} by {{ snippet.created_by.username }}</h2>
+
+<div class="snippet-date">
+    投稿日: {{snippet.created_at|date:"DATETIME_FORMAT"}}
+    {% if user.is_authenticated and snippet.created_by_id == user.id %}
+    <a href="{% url 'snippet_edit' snippet.id %}">編集</a>
+    {% endif %}
+</div>
+
+<div class="source-code">
+    {{ snippet.code|pygmentize:"python3" }}
+</div>
+
+<p>{{ snippet.description }}</p>
+<hr />
+
+<h3>コメント一覧</h3>
+    <ul>
+    {% for comment in comments %}
+        <p>{{ comment.text }}</p>
+        <p>by {{ comment.commented_by }} さん {{ comment.commented_at|date:"DATETIME_FORMAT"}} </p>
+    {% endfor %}
+    </ul>
+
+<h3>コメントを投稿する</h3>
+<form method="post">
+    {% csrf_token %}
+    {% bootstrap_form new_comment %}
+    {% bootstrap_button button_type="submit" content="コメント" %}
+</form>
+
+{% endblock %}
